<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/firstExampleFragment"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/firstExampleFragment"
        android:name="com.task.clockusageexample.FirstExampleFragment"
        android:label="@string/fullscreen_clock"
        tools:layout="@layout/fragment_first_example"/>

    <fragment
        android:id="@+id/secondExampleFragment"
        android:name="com.task.clockusageexample.SecondExampleFragment"
        android:label="@string/clock_usage_example"
        tools:layout="@layout/fragment_second_example"/>

    <fragment
        android:id="@+id/thirdExampleFragment"
        android:name="com.task.clockusageexample.ThirdExampleFragment"
        android:label="@string/clock_colors"
        tools:layout="@layout/fragment_third_example"/>

</navigation>