<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SecondExampleFragment">

        <TextView
            android:id="@+id/oks_explanation_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/test_oks_explanation"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.task.clockcustomview.ClockView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/previous_oks_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/last_test_completion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/run_oks_button"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/main_menu_run_oks" />
    </LinearLayout>
</ScrollView>